--- a/Layout 3/styles.css
+++ b/Layout 3/styles.css
@@ -5,7 +5,7 @@ body{
     display: grid;
     grid-gap: 18px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100px 210px auto 50px;
+    grid-template-rows: 100px 380px 50px 200px 200px 50px;
 }
 h1{
     font-size: 2.6em;
@@ -20,40 +20,55 @@ ul{
     list-style-type: none;
     display: grid;
     height: 60px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template: auto / repeat(4, 1fr);;
     grid-gap: 20px;
     justify-items: center;
     align-content: center;
 }
 nav {
-    grid-row: 1/2; grid-column: 3/5; 
+    grid-row: 1/2; 
+    grid-column: 3/5; 
     align-self: center;
 }
-ul, section, footer{
+div, ul, section, footer{
     background: silver;
 }
 #featured_prod {
+    padding: 60px 40px 80px 40px;
     grid-row: 2/3; 
     grid-column: 1/5; 
 }
-#products{
-    display: grid;
-    grid-row: 3/4; 
-    grid-column: 1/5; 
-    grid-gap: 10px;
-    grid-template-rows: 150px 150px 150px;
-    grid-template-columns: 1fr 1fr 1fr;
+#blog1 {
+    grid-row: 4/5; 
+    grid-column: 1/3; 
 }
-#products > div{
-    background: silver;
+#featured_product1 {
+    grid-row: 4/5; grid-column: 3/4; 
+}
+#featured_product2 {
+    grid-row: 4/5; grid-column: 4/5; 
+}
+#blog2 {
+    grid-row: 5/6; grid-column: 1/3; 
+}
+#featured_product3 {
+    grid-row: 5/6; grid-column: 3/4; 
+}
+#featured_product4 {
+    grid-row: 5/6; grid-column: 4/5; 
+}
+#title1{
+    grid-row: 3/4; grid-column: 1/2; 
+}
+#title2{
+    grid-row: 3/4; grid-column: 3/4 ; 
 }
 footer {
-    grid-row: 4/5; 
+    grid-row: 6/7; 
     grid-column: 1/5; 
     text-align: center;
 }
 div:first-of-type {
-    background: silver;
     grid-row: 1/2; 
     grid-column: 1/2; 
 }
